# Kairo-system

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  eval_test.sqlite3  manage.py  pyproject.toml
.claude/: CONTEXT.md  HANDOFF.md  STATE.md
docs/: PR0_REVIEW.md  PR1_1_REVIEW.md  PR1_REVIEW.md  README.md  SYSTEM_DOCUMENTATION.md  apify_actor_samples.md  deployment_prep_plan.md  vision.md
docs/architecture/: brandbrain_pipeline_world_model.md  opportunities_phase0_backend_world_model.md
docs/audits/: backend_contract_audit.md
docs/contracts/: api.md
docs/debug/: CATCHUP_REPORT.md  backend_e2e_latency_pack.md  freeze_capture_backend_20260114_175434.md  freeze_capture_backend_20260114_182200.md
docs/diagnostics/: brandbrain_compile_run_pack.md
docs/engines/: brand-brain-engine.md  content-engineering-engine.md  learning-engine.md  opportunities-engine.md  patterns-engine.md
docs/eval/: f1-f2-quality-classifier.md  hero-loop-eval.md
docs/frontend_repo/: convergence_plan.md
docs/my_notes/: chatgpt-recap-jan17  note1-jan17
docs/notes/: apify_field_observations.md  deployment-strategy.md  dev_env_database_url_fix.md
docs/pr_checks/: auth_reality_check.md  backend_frontend_e2e_gap_report.md  backend_frontend_min_api_code_pack.md  backend_frontend_route_contract.md  backend_local_smoke_e2e.md  pr4_pr5_readiness_audit.md  pr4_sort_crash_patch.md  pr5_compile_orchestration_verification.md  pr6_job_runner_and_ingestion_verification.md  pr6_prod_footguns_code_pack.md  pr6_stale_lease_patch.md  pr7_api_surface_verification.md  pr7_backend_runtime_and_cors_pack.md  pr7_code_pack.md  pr7_truthfulness_patch.md
docs/prd/: PR-map-and-standards  brandbrain_spec_skeleton.md  evalHarness.md  prd-map.md  (+4 more)
kairo/: __init__.py  asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
scripts/: run_manage.py  smoke_backend_timings.sh  start_production.sh  test_llm.py
tests/: __init__.py  conftest.py  test_content_engine_integration.py  test_dto_roundtrip.py  test_engines_stub_behavior.py  test_eval_hero_loop.py  test_external_signals_service.py  test_healthcheck.py  test_http_contracts.py  test_internal_views.py  test_learning_pipeline.py  test_llm_client.py  test_management_commands.py  test_models_schema.py  test_observability_store.py  test_opportunities_engine_integration.py  test_opportunities_graph.py  test_opportunities_v2_golden_path.py  test_opportunities_v2_pr1.py  test_opportunities_v2_pr1_1.py  test_package_graph.py  test_quality_classifier.py  test_run_context_and_logging.py  test_services_content.py  test_services_decisions.py  test_services_opportunities.py  test_services_today.py  test_variants_graph.py
(+275 files in other folders)
